[package]
name = "ludo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64ct = { version = "1.7.3", features = ["alloc"] }
clap = { version = "4.5.35", features = ["derive"] }
dirs = "6.0.0"
libloading = "0.8.6"
mlua = { version = "0.10", features = ["luau"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
thiserror = "2.0.12"
log = "0.4.27"
ansi_term = "0.12.1"
